# PulsarionMath

./: .gitmodules  CMakeLists.txt  README.md
src/: Math.cpp
src/PulsarionMath/: Complex.hpp  Constants.hpp  Conversion.hpp  Core.hpp  DataStorage.hpp  EulerAngle.hpp  Math.hpp  Matrix.hpp  Matrix4x4M.hpp  Matrix4x4MSSE.hpp  MatrixCommon.hpp  MatrixTransform.hpp  Qualifier.hpp  Quaternion.hpp  Simd.hpp  Vector.hpp  Vector.inl  Vector4Aligned.hpp  Vector4AlignedSSE.hpp  Vector4Packed.hpp  Vector4PackedSSE.hpp  VectorCommon.hpp
src/PulsarionMath/Matrix/: Mat4x4Row.hpp  Util.hpp
tests/: CMakeLists.txt  Matrix4x4Tests.cpp  MatrixNoSimdTests.cpp  MatrixTests.cpp  MatrixTransformTests.cpp  QuaternionTests.cpp  Vector4AlignedTests.cpp  Vector4PackedTests.cpp  VectorNoSimdTests.cpp  VectorTests.cpp
